# catalog_service

./: pyproject.toml  readme.md  requirements.txt
src/catalog_service/: __init__.py  connection_pool.py  models.py  service.py
